[tool.poetry]
name = "checkbox"
version = "0.1.0"
description = ""
authors = ["Mowlidharan <mowlidharanarumugam@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.0.0"
scikit-learn = "^1.5.0"
flask = "^3.0.3"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
